# ai-news-aggregator

./: .gitignore  README.md  api.py  main.py  pyproject.toml  railway.json  requirements.txt  run.bat
app/: models.py
app/scrapers/: anthropic.py  deepmind.py  google_research.py  huggingface.py  mistral.py  mit_tech_review.py  openai.py
app/services/: article_service.py  database.py  email_digest.py  email_service.py  summarizer.py
docker/: docker-compose.yml
static/: index.html
